--- a/projects/angular/src/button/_properties.buttons.scss
+++ b/projects/angular/src/button/_properties.buttons.scss
@@ -16,6 +16,10 @@
       --clr-btn-horizontal-padding: #{button-variables.$clr-btn-horizontal-padding};
       --clr-btn-vertical-padding: 0;
       --clr-btn-padding: var(--clr-btn-vertical-padding) var(--clr-btn-horizontal-padding);
+      --clr-btn-appearance-gap: #{variables.$clr_baselineRem_8px};
+      --clr-btn-display: inline-block;
+      --clr-btn-appearance-icon-margin: #{-1.4 * variables.$clr_baselineRem_2px};
+      --clr-btn-appearance-sm-icon-margin: -0.1rem;
 
       // Sizing
       --clr-btn-height: #{button-variables.$clr-btn-height};
